Fix: Shop realignment when fetch fails to render

--- a/src/pages/Shop.module.css
+++ b/src/pages/Shop.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 75px 50px;
+    flex: 1;
 }
 
 .span {
